# Computer-Plays-Factorio

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
data/: config.example.json  defaultConfig.ini  test.txt
data/dataScraper/: mod-list.json
data/dataScraper/dataScraper/: data-final-fixes.lua  info.json
data/lua/computer-plays-factorio/: api.lua  basicRequests.lua  control.lua  event.lua  freeplay.lua  instruction.lua  instructions.lua  math2d.lua
data/lua/computer-plays-factorio/requests/: craft.lua  entity.lua  item.lua  walk.lua
data/mods/computer-plays-factorio/: api.lua  control.lua  event.lua  freeplay.lua  instruction.lua  math2d.lua  utils.lua
data/mods/computer-plays-factorio/requests/: entity.lua  item.lua  walk.lua
lua/: mod-list.json
lua/computer-plays-factorio/: api.lua  control.lua  event.lua  info.json  serializer.lua
projects/test/: main.lua
scripts/: dataScraper.py
src/: app.cpp  app.hpp  factorioAPI.cpp  factorioAPI.hpp  factorioData.hpp  gui.cpp  gui.hpp  instruction.hpp  instructionGenerator.hpp  logging.cpp  logging.hpp  main.cpp  playerController.cpp  playerController.hpp  serializer.cpp  serializer.hpp  serializer_old.hpp  thread.cpp  thread.hpp  utils.cpp  utils.hpp
src/algorithms/: TSP.hpp  path-finder.cpp  path-finder.hpp  pathFinder.cpp  pathFinder.hpp
src/bot/: bot.cpp  bot.hpp  docs.txt  event.cpp  event.hpp  instruction.hpp  instructionGroup.hpp  map-data.cpp  map-data.hpp  mapData.cpp  mapData.hpp  subtask.hpp  task.cpp  task.hpp
src/factorio-API/: factorio-API.cpp  factorio-API.hpp  prototypes.cpp  prototypes.hpp  types.cpp  types.hpp
src/factorioAPI/: factorioAPI.cpp  factorioAPI.hpp  factorioAPI_linux.cpp  factorioAPI_windows.cpp  factorioData.hpp  instruction.cpp  instruction.hpp  playerController.cpp  types.hpp
src/gui/: gui.cpp  gui.hpp  mainWindow.cpp  mainWindow.hpp
src/projects/: test.cpp  test.hpp
src/utils/: include-reflectcpp.hpp  includeReflectcpp.hpp  logging.cpp  logging.hpp  luaUtils.hpp  serializer.hpp  thread.cpp  thread.hpp  typeTraits.hpp  utils.cpp  utils.hpp
